--- a/app/src/main/res/layout/activity_data.xml
+++ b/app/src/main/res/layout/activity_data.xml
@@ -6,14 +6,29 @@
     android:orientation="vertical">
 
     <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
+        android:id="@+id/dt_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:title="@string/app_name" />
+        app:title="@string/app_name" >
+        <TextView
+            android:id="@+id/dt_subtitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="subtitle"
+            android:textSize="20sp"/>
+    </androidx.appcompat.widget.Toolbar>
 
-    <com.magicgoop.tagsphere.TagSphereView
-        android:id="@+id/tagView"
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/dt_tlTabs"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content"
+        app:tabMode="scrollable" />
+
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/dt_viewpager"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:background="@android:color/white" />
 
 </LinearLayout>
