--- a/app/src/main/res/layout/fragment_data_graph.xml
+++ b/app/src/main/res/layout/fragment_data_graph.xml
@@ -6,9 +6,10 @@
     tools:context=".DataGraphFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+
+    <com.github.mikephil.charting.charts.LineChart
+        android:id="@+id/chart"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="match_parent" />
 
 </FrameLayout>
