--- a/app/src/main/res/layout/fragment_mr.xml
+++ b/app/src/main/res/layout/fragment_mr.xml
@@ -8,7 +8,7 @@
     android:gravity="center"
     android:weightSum="100"
     android:orientation="vertical"
-    tools:context=".TestFragment">
+    tools:context=".MirrorControlFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
