--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,16 +5,28 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_home"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="Reboot mirror" />
-        <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="Shutdown mirror" />
+            android:title="Mirror Control">
+            <menu>
+                <item
+                    android:id="@+id/nav_home"
+                    android:icon="@drawable/reboot"
+                    android:title="Reboot mirror" />
+                <item
+                    android:id="@+id/nav_gallery"
+                    android:icon="@drawable/shutdown"
+                    android:title="Shutdown mirror" />
+            </menu>
+        </item>
+
+
+
+    </group>
+    <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
+            android:icon="@drawable/outline_logout_24"
             android:title="LogOut Mirror" />
     </group>
+
+
 </menu>
