--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,9 +3,9 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
-    <color name="primary">#009688</color>
-    <color name="primary_light">#b2dfdb</color>
-    <color name="primary_dark">#004d40</color>
+    <color name="primary">#424242</color>
+    <color name="primary_light">#6d6d6d</color>
+    <color name="primary_dark">#1b1b1b</color>
     <color name="windowBackground">#e0f2f1</color>
     <color name="buttonColor">#b2dfdb</color>
 </resources>
