--- a/app/src/main/res/layout/activity_data.xml
+++ b/app/src/main/res/layout/activity_data.xml
@@ -20,9 +20,11 @@
     </androidx.appcompat.widget.Toolbar>
 
     <com.google.android.material.tabs.TabLayout
+        android:theme="@style/Theme.MaterialComponents.Light.DarkActionBar"
         android:id="@+id/dt_tlTabs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="5dp"
         app:tabMode="scrollable" />
 
     <androidx.viewpager2.widget.ViewPager2
