--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
+    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
     tools:openDrawer="start">
 
     <include
@@ -38,9 +39,9 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 app:icon="@drawable/outline_logout_24"
-                android:iconTint="@color/colorPrimary"
                 android:textColor="@color/colorPrimary"
                 style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
+                android:onClick="logOutThisIp"
                 android:text="Log out" />
         </LinearLayout>
 
