--- a/app/src/main/res/layout/topic_list_item.xml
+++ b/app/src/main/res/layout/topic_list_item.xml
@@ -18,6 +18,7 @@
             android:orientation="horizontal">
 
             <LinearLayout
+                android:id="@+id/in_layout"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="30"
@@ -73,13 +74,13 @@
 
             </LinearLayout>
             <LinearLayout
+                android:id="@+id/del_layout"
                 android:layout_width="wrap_content"
                 android:background="@color/colorPrimaryLight"
                 android:theme="@style/Theme.MaterialComponents.Light"
                 android:layout_height="match_parent">
 
                 <ImageView
-                    android:id="@+id/del_Btn"
                     android:layout_width="55dp"
                     android:layout_height="70dp"
                     android:layout_gravity="center|left"
