--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,69 +1,82 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:background="@color/primary"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:scrollbars="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+<?xml version="1.0" encoding="utf-8"?>
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    style="@style/Theme.MaterialComponents.DayNight.NoActionBar"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".login.LoginActivity">
 
-    <RelativeLayout
-        android:padding="5dp"
-        android:layout_centerVertical="true"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/myrectengle"
-        android:id="@+id/relativeLayout">
+        android:orientation="vertical"
+        android:paddingTop="30dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:gravity="center"
+            android:layout_height="150dp">
+            <ImageView
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                android:src="@drawable/outline_nights_stay_24"/>
 
-        <EditText
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/et_ipAddress"
-            android:inputType="number|numberDecimal"
-            android:digits="0123456789."
-            android:hint="MirrorAddress"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true" />
+        </LinearLayout>
 
-        <EditText
-            android:layout_width="fill_parent"
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/et_APIkey"
-            android:hint="APIKey"
-            android:inputType="textPassword"
-            android:layout_below="@+id/et_ipAddress"
-            android:layout_alignParentStart="true" />
+            android:layout_marginBottom="3dp"
+            android:padding="5dp"
+            android:hint="Ip_Address">
 
-        <Button
-            android:textColor="@color/primary_dark"
-            android:layout_width="wrap_content"
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/login_Ip"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+            </com.google.android.material.textfield.TextInputEditText>
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Login"
-            android:id="@+id/b_login"
-            android:elevation="8dp"
-            style="?android:attr/borderlessButtonStyle"
-            android:layout_below="@+id/cb_rememberMe"
-            android:layout_alignEnd="@+id/et_APIkey"
-            android:onClick="Login_Click"/>
+            android:padding="5dp"
+
+            android:layout_marginBottom="3dp"
+            android:hint="mirror_API">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/login_Api"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+            </com.google.android.material.textfield.TextInputEditText>
+        </com.google.android.material.textfield.TextInputLayout>
 
         <CheckBox
+            android:id="@+id/loign_rememberMe"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Remember Me"
-            android:id="@+id/cb_rememberMe"
-            android:layout_below="@+id/et_APIkey"
-            android:layout_alignStart="@+id/et_APIkey"
-            android:checked="false" />
+            android:checked="false"
+            android:text="Remember Me" />
 
-    </RelativeLayout>
+        <Button
+            android:id="@+id/b_login"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:elevation="8dp"
+            android:layout_gravity="right"
+            android:layout_marginRight="3dp"
+            android:text="Login"
+            android:onClick="verifyLogin"/>
 
-    <ImageView
-        android:layout_marginBottom="15dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/imageView"
-        android:layout_above="@+id/relativeLayout"
-        android:layout_centerHorizontal="true"
-        android:src="@drawable/logo"/>
 
-</RelativeLayout>
+    </LinearLayout>
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
