--- a/app/src/main/res/layout/fragment_data_graph.xml
+++ b/app/src/main/res/layout/fragment_data_graph.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DataAct.DataGraphFragment">
+    tools:context=".data.DataGraphFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
