--- a/app/src/main/res/layout/fragment_data_sphere.xml
+++ b/app/src/main/res/layout/fragment_data_sphere.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DataAct.DataSphereFragment">
+    tools:context=".data.DataSphereFragment">
 
     <com.magicgoop.tagsphere.TagSphereView
         android:id="@+id/tagView"
