--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -8,11 +8,11 @@
             android:title="Mirror Control">
             <menu>
                 <item
-                    android:id="@+id/nav_home"
+                    android:id="@+id/mirror_reboot"
                     android:icon="@drawable/reboot"
                     android:title="Reboot mirror" />
                 <item
-                    android:id="@+id/nav_gallery"
+                    android:id="@+id/mirror_shutdown"
                     android:icon="@drawable/shutdown"
                     android:title="Shutdown mirror" />
             </menu>
